# pydocq

./: README.md  pyproject.toml
.claude/: settings.local.json
docs/features/: IDEAS.md
docs/issues/: 008-expose-ast-analysis-to-cli.md  009-llm-output-format.md  010-combined-ai-flag.md  011-usage-examples-from-tests.md  012-version-diff-implementation.md  013-semantic-search-implementation.md
docs_cli/: cli.py
docs_cli/analyzer/: ast_analyzer.py  discovery.py  formatter.py  inspector.py  output_formats.py  resolver.py  search.py  type_parser.py
pydocq/: __main__.py  cli.py
pydocq/analyzer/: example_extractor.py  explorer.py  output_formats.py  resolver.py  search.py
tests/: test_analyze_command.py  test_ast_analyzer.py  test_cli.py  test_compact_verbose_list_members.py  test_discovery.py  test_example_extraction.py  test_for_ai_flag.py  test_formatter.py  test_hyphenated_packages.py  test_inspector.py  test_llm_format.py  test_main.py  test_output_formats.py  test_recursive_exploration.py  test_resolver.py  test_search.py  test_search_members.py  test_system_metadata_filtering.py  test_type_detection.py
